force-app/main/default/objects/Candy_Spot__c/Candy_Spot__c.object-meta.xml
<CustomObject>
    <label>Candy Spot</label>
    <nameField>
        <label>Candy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candy Spots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>