force-app/main/default/objects/Candy_Spot__c/fields/Candy_Date__c.field-meta.xml
<CustomField>
    <fullName>Candy_Date__c</fullName>
    <label>Candy Date</label>
    <type>Date</type>
</CustomField>