force-app/main/default/objects/Candy_Spot__c/fields/Candy_Type__c.field-meta.xml
<CustomField>
    <fullName>Candy_Type__c</fullName>
    <label>Candy Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chocolate Bar</fullName>
            </value>
            <value>
                <fullName>Jelly Beans</fullName>
            </value>
            <value>
                <fullName>Lollipops</fullName>
            </value>
            <value>
                <fullName>Licorice</fullName>
            </value>
            <value>
                <fullName>Gum</fullName>
            </value>
            <value>
                <fullName>Chips</fullName>
            </value>
            <value>
                <fullName>Chocolates</fullName>
            </value>
            <value>
                <fullName>Caramels</fullName>
            </value>
            <value>
                <fullName>Gummies</fullName>
            </value>
            <value>
                <fullName>Hard Candy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>