force-app/main/default/objects/Candy_Spot__c/fields/Healthy__c.field-meta.xml
<CustomField>
    <fullName>Healthy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Healthy</label>
    <type>Checkbox</type>
</CustomField>