force-app/main/default/objects/Candy_Spot__c/fields/Nuts__c.field-meta.xml
<CustomField>
    <fullName>Nuts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nuts</label>
    <type>Checkbox</type>
</CustomField>